Fix some performance (FindBugs hint) using
* Integer.valueOf() instead of new Integer()
* Integer.parseInt(string) instead of new Integer(string).intValue()
* Integer.toString(int) instead of new Integer(int).toString()

Signed-off-by: Mickael Istria <mistria@redhat.com>